--- a/generator.html
+++ b/generator.html
@@ -253,7 +253,7 @@
           $("surveyDesc").innerText = survey[el.biome].surveyDesc + " This planet is suitable for life.";
         }
         else {
-          $("surveyDesc").innerText = survey[el.biome].surveyDesc + " This planet is suitable for life.";
+          $("surveyDesc").innerText = survey[el.biome].surveyDesc;
           alert ("Unidentified planet")
         }
       }
