--- a/generator.html
+++ b/generator.html
@@ -272,6 +272,8 @@
         HUDCreditNumber.innerText = newCreditNumber;
         var newSupplyNumber = Number(HUDSupplyNumber.innerText) - 100;
         HUDSupplyNumber.innerText = newSupplyNumber;
+        var newPopulationNumber = Number(surveyPop.innerText) + 2;
+        surveyPop.innerText = newPopulationNumber
       }
       
       //system generation
@@ -346,4 +348,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.73--->
+<!--Version 0.74--->
