--- a/generator.html
+++ b/generator.html
@@ -287,7 +287,7 @@
         var newPopulationNumber = Number(surveyPop.innerText) + 2;
         surveyPop.innerText = newPopulationNumber;
         var el = $(lastSelectedPlanet);
-        var colonyMarker = $(passiveColonyMarker);
+        var colonyMarker = $("passiveColonyMarker");
         var newTop = el.offsetTop - 5;
         var newLeft = el.offsetLeft + 60;
         colonyMarker.style.top = newTop + "px";
@@ -370,4 +370,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.77--->
+<!--Version 0.78--->
