--- a/generator.html
+++ b/generator.html
@@ -289,7 +289,7 @@
         var system = $("system1");
         var el = $(lastSelectedPlanet);
         var colonyMarker = $("passiveColonyMarker");
-        var newTop = el.offsetTop;
+        var newTop = el.offsetTop - 10;
         var newLeft = el.offsetLeft + 60;
         colonyMarker.style.top = newTop + "px";
         colonyMarker.style.left = newLeft + "px";
@@ -371,4 +371,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.86--->
+<!--Version 0.87--->
