--- a/generator.html
+++ b/generator.html
@@ -317,8 +317,8 @@
                        ["barrenplanet1.png", "barren"],
                        ["barrenplanet1.png", "barren"],
                        ["barrenplanet1.png", "barren"],
-                       ["gasplanet1.png",    "gas1"],
-                       ["gasplanet1.png",    "gas1"],
+                       ["gasplanet1.png",    "gas"],
+                       ["gasplanet1.png",    "gas"],
                        ["junkplanet1.png",   "junk"]];
         var planetElList = $$('#system1 .planet');
         for (const pEl of planetElList) {
@@ -371,4 +371,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.87--->
+<!--Version 0.88--->
