--- a/generator.html
+++ b/generator.html
@@ -300,7 +300,7 @@
       }
       function surveyColony(el) {
         var planet = el.id - "passiveColonyMarker-";
-        console.log (planet)
+        console.log(planet);
       }
       
       //system generation
