--- a/generator.html
+++ b/generator.html
@@ -269,11 +269,6 @@
           alert ("Unidentified planet")
         }
       }
-      function preSurvey(planet) {
-        var el = $(planet);
-        survey(el);
-        console.log("preSurvey executed");
-      }
       function buildMiningStation() {
         alert("you built a mining station - This function has not been added yet");
         var newMineralNumber = Number(HUDMineralNumber.innerText) - 40;
@@ -305,8 +300,9 @@
       }
       function surveyColony(el) {
         var planet = el.id.split("-")[1];
-        console.log(planet);
-        preSurvey(planet);
+        lastSelectedPlanet = $(planet);
+        console.log("surveyColony executed" + planet);
+        survey();
       }
       
       //system generation
@@ -381,4 +377,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.91--->
+<!--Version 0.92--->
