--- a/generator.html
+++ b/generator.html
@@ -217,8 +217,8 @@
       }
       
       function survey() {
-        let el = $(lastSelectedPlanet);
-        //console.log(el.biome);
+        var el = $(lastSelectedPlanet);
+        console.log(el.biome);
         var infoBox = $("info-box");
         infoBox.style.display = "inline-grid";
         
