--- a/generator.html
+++ b/generator.html
@@ -300,7 +300,7 @@
       }
       function surveyColony(el) {
         var planet = el.id.split("-")[1];
-        lastSelectedPlanet = $(planet);
+        lastSelectedPlanet = planet;
         console.log("surveyColony executed " + planet);
         survey();
       }
@@ -377,4 +377,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.93--->
+<!--Version 0.94--->
