--- a/generator.html
+++ b/generator.html
@@ -380,7 +380,7 @@
       if (HUDAuthorityNumber.innerText <= 0) {
         alert("you ran out of Authority, you can no longer control your government")
       }
-      if (HUDSuplliesNumber.innerText <= 0) {
+      if (HUDSupplyNumber.innerText <= 0) {
         alert("you ran out of Supplies, your colonies are starving")
       }
       
