--- a/generator.html
+++ b/generator.html
@@ -385,8 +385,9 @@
       }
       
       function showInfo(el) {
-        if el = $("miningStationMarker");
-        alert ("Mining Stations produce 10 Minerals every turn. Use the tech tree to upgrade(tech tree not in random system generator).")
+        if el = $("miningStationMarker") {
+          alert ("Mining Stations produce 10 Minerals every turn. Use the tech tree to upgrade(tech tree not in random system generator).");
+        }
       }
       
       ///broken, needs to be added in "next turn" function (currently executes on webpage opening)
