--- a/generator.html
+++ b/generator.html
@@ -385,7 +385,7 @@
       }
       
       function showInfo(el) {
-        if el = $("miningStationMarker") {
+        if (el = $("miningStationMarker")) {
           alert ("Mining Stations produce 10 Minerals every turn. Use the tech tree to upgrade(tech tree not in random system generator).");
         }
       }
