--- a/generator.html
+++ b/generator.html
@@ -271,6 +271,7 @@
           alert ("Unidentified planet")
         }
       }
+      ///make first/second child of planets to make mining stations/colonies fit
       function buildMiningStation() {
         alert("you built a mining station - This function has not been added yet");
         var newMineralNumber = Number(HUDMineralNumber.innerText) - 40;
