--- a/generator.html
+++ b/generator.html
@@ -296,6 +296,8 @@
         HUDMineralNumber.innerText = newMineralNumber;
         var newCreditNumber = Number(HUDCreditNumber.innerText) - 40;
         HUDCreditNumber.innerText = newCreditNumber;
+        var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 20;
+        HUDAuthorityNumber.innerText = newAuthorityNumber;
         var newSupplyNumber = Number(HUDSupplyNumber.innerText) - 100;
         HUDSupplyNumber.innerText = newSupplyNumber;
         var newPopulationNumber = Number(surveyPop.innerText) + 2;
