--- a/generator.html
+++ b/generator.html
@@ -273,48 +273,64 @@
       }
       ///make first/second child of planets to make mining stations/colonies fit
       function buildMiningStation() {
-        alert("you built a mining station - This function has not been added yet");
-        var newMineralNumber = Number(HUDMineralNumber.innerText) - 40;
-        HUDMineralNumber.innerText = newMineralNumber;
-        var newCreditNumber = Number(HUDCreditNumber.innerText) - 100;
-        HUDCreditNumber.innerText = newCreditNumber;
-        var system = $("system1");
-        var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 10;
-        HUDAuthorityNumber.innerText = newAuthorityNumber;
         var el = $(lastSelectedPlanet);
-        var stationMarker = $("miningStationMarker");
-        var newTop = el.offsetTop - 10;
-        var newLeft = el.offsetLeft + 75;
-        stationMarker.style.top = newTop + "px";
-        stationMarker.style.left = newLeft + "px";
-        var newMarker = stationMarker.cloneNode(true);
-        newMarker.id = newMarker.id + "-" + el.id;
-        system.appendChild(newMarker);
-        newMarker.style.display = "block";
+        const miningPlanets = ["mineral1", "mineral2", "mineral3"];
+        if (miningPlanets.incudes(el.biome)) {
+          alert("you built a mining station - This function has not been added yet");
+          var newMineralNumber = Number(HUDMineralNumber.innerText) - 40;
+          HUDMineralNumber.innerText = newMineralNumber;
+          var newCreditNumber = Number(HUDCreditNumber.innerText) - 100;
+          HUDCreditNumber.innerText = newCreditNumber;
+          var system = $("system1");
+          var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 10;
+          HUDAuthorityNumber.innerText = newAuthorityNumber;
+          var stationMarker = $("miningStationMarker");
+          var newTop = el.offsetTop - 10;
+          var newLeft = el.offsetLeft + 75;
+          stationMarker.style.top = newTop + "px";
+          stationMarker.style.left = newLeft + "px";
+          var newMarker = stationMarker.cloneNode(true);
+          newMarker.id = newMarker.id + "-" + el.id;
+          system.appendChild(newMarker);
+          newMarker.style.display = "block";
+        }
+        else {
+          alert ("You can't build a Mining Station here, this planet is not suitable for mining");
+        }
       }
       function buildColony() {
-        alert("you built a colony - This function is still in development");
-        var newMineralNumber = Number(HUDMineralNumber.innerText) - 20;
-        HUDMineralNumber.innerText = newMineralNumber;
-        var newCreditNumber = Number(HUDCreditNumber.innerText) - 40;
-        HUDCreditNumber.innerText = newCreditNumber;
-        var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 20;
-        HUDAuthorityNumber.innerText = newAuthorityNumber;
-        var newSupplyNumber = Number(HUDSupplyNumber.innerText) - 100;
-        HUDSupplyNumber.innerText = newSupplyNumber;
-        var newPopulationNumber = Number(surveyPop.innerText) + 2;
-        surveyPop.innerText = newPopulationNumber;
-        var system = $("system1");
         var el = $(lastSelectedPlanet);
-        var colonyMarker = $("passiveColonyMarker");
-        var newTop = el.offsetTop - 10;
-        var newLeft = el.offsetLeft + 55;
-        colonyMarker.style.top = newTop + "px";
-        colonyMarker.style.left = newLeft + "px";
-        var newMarker = colonyMarker.cloneNode(true);
-        newMarker.id = newMarker.id + "-" + el.id;
-        system.appendChild(newMarker);
-        newMarker.style.display = "block";
+        const uninhabitablePlanets = ["mineral1", "mineral2", "mineral3", "barren", "junk", "gas"];        
+        const habitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean", "relic"];
+        if (habitablePlanets.includes(el.biome)) {
+          alert("you built a colony - This function is still in development");
+          var newMineralNumber = Number(HUDMineralNumber.innerText) - 20;
+          HUDMineralNumber.innerText = newMineralNumber;
+          var newCreditNumber = Number(HUDCreditNumber.innerText) - 40;
+          HUDCreditNumber.innerText = newCreditNumber;
+          var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 20;
+          HUDAuthorityNumber.innerText = newAuthorityNumber;
+          var newSupplyNumber = Number(HUDSupplyNumber.innerText) - 100;
+          HUDSupplyNumber.innerText = newSupplyNumber;
+          var newPopulationNumber = Number(surveyPop.innerText) + 2;
+          surveyPop.innerText = newPopulationNumber;
+          var system = $("system1");
+          var colonyMarker = $("passiveColonyMarker");
+          var newTop = el.offsetTop - 10;
+          var newLeft = el.offsetLeft + 55;
+          colonyMarker.style.top = newTop + "px";
+          colonyMarker.style.left = newLeft + "px";
+          var newMarker = colonyMarker.cloneNode(true);
+          newMarker.id = newMarker.id + "-" + el.id;
+          system.appendChild(newMarker);
+          newMarker.style.display = "block";
+        }
+        else if (uninhabitablePlanets.includes(el.biome)) {
+          alert ("This planet is uninhabitable. You cannot build a colony here");
+        }
+        else {
+          alert ("Something went wrong with this function");
+        }
       }
       function surveyColony(el) {
         var planet = el.id.split("-")[1];
@@ -415,4 +431,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.99--->
+<!--Version 0.100--->
