--- a/generator.html
+++ b/generator.html
@@ -299,7 +299,7 @@
           HUDMineralNumber.innerText = newMineralNumber;
           var newCreditNumber = Number(HUDCreditNumber.innerText) + 50;
           HUDCreditNumber.innerText = newCreditNumber;
-          alert("This system is not suitable for mining. However, it is rich in resources, and instead of building a mining station you can salvage them");
+          alert("This system is not suitable for mining. However, it is rich in resources, and instead of building a mining station you can salvage them.");
         }
         else {
           alert ("You can't build a Mining Station here, this planet is not suitable for mining");
