--- a/generator.html
+++ b/generator.html
@@ -184,25 +184,24 @@
     <script>
       //global variables
       var lastSelectedPlanet = null;
-      var randomHabit = Number(Math.floor(Math.random() * 100) + 1) + "%";
       var surveyDictionary = {
           desert: { surveyName: "Desert World", surveyImage: "desertplanet1.png", surveyCost: "10", surveySize:"TBD",
-                   surveyHabit: randomHabit, surveyDesc: "Your scans of the planet show nothing but endless seas of dunes dotted with cacti and oases.",
+                   surveyHabit: "TBD", surveyDesc: "Your scans of the planet show nothing but endless seas of dunes dotted with cacti and oases.",
                  surveyPop:0 }, 
           savanna: { surveyName: "Savanna World", surveyImage: "savannaplanet1.png", surveyCost: "10", surveySize:"TBD", 
-                    surveyHabit: randomHabit, surveyDesc: "The grasslands of this planet stretch to the horizon, dotted with trees, caves, hills, and small oceans.",
+                    surveyHabit: "TBD", surveyDesc: "The grasslands of this planet stretch to the horizon, dotted with trees, caves, hills, and small oceans.",
                  surveyPop:0 },
           arctic: { surveyName: "Arctic World", surveyImage: "arcticplanet1.png", surveyCost: "10", surveySize:"TBD", 
-                   surveyHabit: randomHabit, surveyDesc: "This planet is a barren, freezing, thick floe of ice. It may have once been an Ocean World.",
+                   surveyHabit: "TBD", surveyDesc: "This planet is a barren, freezing, thick floe of ice. It may have once been an Ocean World.",
                  surveyPop:0 },
           tundra: { surveyName: "Tundra World", surveyImage: "tundraplanet1.png", surveyCost: "10", surveySize:"TBD", 
-                   surveyHabit: randomHabit, surveyDesc: "What was probably once a rolling green-hilled planet has been frozen to its core.",
+                   surveyHabit: "TBD", surveyDesc: "What was probably once a rolling green-hilled planet has been frozen to its core.",
                  surveyPop:0 },
           continental: { surveyName: "Continental World", surveyImage: "continentalplanet1.png", surveyCost: "10", surveySize:"TBD", 
-                        surveyHabit: randomHabit, surveyDesc: "The hills and valleys of this planet are a brilliant, verdant green when in bloom.",
+                        surveyHabit: "TBD", surveyDesc: "The hills and valleys of this planet are a brilliant, verdant green when in bloom.",
                  surveyPop:0 },
           ocean: { surveyName: "Ocean World", surveyImage: "oceanplanet1.png", surveyCost: "10", surveySize:"TBD", 
-                  surveyHabit: randomHabit, surveyDesc: "This planet is entirely a massive ocean, bound to a small rock core by a strong magnetic field.",
+                  surveyHabit: "TBD", surveyDesc: "This planet is entirely a massive ocean, bound to a small rock core by a strong magnetic field.",
                  surveyPop:0 },
           relic: { surveyName: "Relic World", surveyImage: "relicplanet1.png", surveyCost: "15", surveySize:"TBD", 
                   surveyHabit: "70% Habitable", surveyDesc: "An ancient civilization inhabited this planet, leaving the endless ruins of massive cities behind.",
@@ -272,7 +271,8 @@
         $("surveyImage").src = surveyDictionary[el.biome].surveyImage;
         $("surveySize").innerText = surveyDictionary[el.biome].surveySize;
         $("surveyCost").innerText = surveyDictionary[el.biome].surveyCost;
-        $("surveyHabit").innerText = surveyDictionary[el.biome].surveyHabit;
+        var randomHabit = Number(Math.floor(Math.random() * 100) + 1) + "%";
+        $("surveyHabit").innerText = randomHabit;
         const uninhabitablePlanets = ["mineral1", "mineral2", "mineral3", "barren", "junk", "gas"];
         const habitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean", "relic"];
         if (uninhabitablePlanets.includes(el.biome)) {
@@ -454,4 +454,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.110--->
+<!--Version 0.111--->
