--- a/generator.html
+++ b/generator.html
@@ -273,7 +273,7 @@
         $("surveyCost").innerText = surveyDictionary[el.biome].surveyCost;
         for (const pEl of planetElList) {
           var basicHabitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean"];
-          if (basicHabitablePlanets.includes(pEL.biome)) {
+          if (basicHabitablePlanets.includes(pEl.biome)) {
             pEl.randomHabit = Number(Math.floor(Math.random() * 100) + 1) + "%";
           }
         }
@@ -457,4 +457,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.116--->
+<!--Version 0.117--->
