--- a/generator.html
+++ b/generator.html
@@ -259,7 +259,18 @@
         var planetMenu = $("planetMenu");
         planetMenu.style.display = "none";
       }
-      
+      for (const pEl of planetElList) {
+        var basicHabitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean"];
+        if (basicHabitablePlanets.includes(pEl.biome)) {
+          pEl.randomHabit = Number(Math.floor(Math.random() * 100) + 1) + "%";
+        }
+        else if (pEl.biome == "relic") {
+          pEl.randomHabit = "70%";
+        }
+        else {
+          pEl.randomHabit = "Uninhabitable";
+        }
+      }
       function survey() {
         var el = $(lastSelectedPlanet);
         console.log(el.biome);
@@ -271,12 +282,6 @@
         $("surveyImage").src = surveyDictionary[el.biome].surveyImage;
         $("surveySize").innerText = surveyDictionary[el.biome].surveySize;
         $("surveyCost").innerText = surveyDictionary[el.biome].surveyCost;
-        for (const pEl of planetElList) {
-          var basicHabitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean"];
-          if (basicHabitablePlanets.includes(pEl.biome)) {
-            pEl.randomHabit = Number(Math.floor(Math.random() * 100) + 1) + "%";
-          }
-        }
         $("surveyHabit").innerText = el.randomHabit;
         const uninhabitablePlanets = ["mineral1", "mineral2", "mineral3", "barren", "junk", "gas"];
         const habitablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean", "relic"];
@@ -457,4 +462,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.117--->
+<!--Version 0.118--->
