--- a/generator.html
+++ b/generator.html
@@ -402,7 +402,10 @@
           }
         }
         for (const pEl of planetElList) {
-          pEl.randomSize = "Size " + Number(Math.floor(Math.random() * 10) + 1);
+          var sizeNumber = Number(Math.floor(Math.random() * 10) + 1);
+          pEl.randomSize = "Size " + sizeNumber;
+          pEl.style.height = sizeNumber + 45 + "px";
+          pEl.style.width = sizeNumber + 45 + "px";
         }
       }
       function generatePosition() {
@@ -466,4 +469,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.122--->
+<!--Version 0.123--->
