--- a/generator.html
+++ b/generator.html
@@ -50,7 +50,7 @@
       .pop span { font-size:120% }
       .top { grid-area: top; gap:0px; display:none; }
       .bottom { grid-area: bottom; gap:0px; display:none; }
-      #surveyImage { background:grey; border-radius:50%; }
+      #surveyImage { background:grey; border-radius:50%; padding:0.2px; }
       
       .HUD { position:fixed; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
         display:inline-grid;
