--- a/generator.html
+++ b/generator.html
@@ -267,7 +267,7 @@
         infoBox.style.display = "inline-grid";
                 
         var biome = el.biome;
-        $("surveyName").innerText = surveyDictionary[el.biome].surveyName;
+        $("surveyName").innerText = "John " + surveyDictionary[el.biome].surveyName;
         $("surveyImage").src = surveyDictionary[el.biome].surveyImage;
         $("surveySize").innerText = el.randomSize;
         $("surveyCost").innerText = surveyDictionary[el.biome].surveyCost;
@@ -474,4 +474,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.126--->
+<!--Version 0.127--->
